fixes #1033 Incomplete author line visible on small screens

--- a/app/assets/stylesheets/_application.scss
+++ b/app/assets/stylesheets/_application.scss
@@ -481,6 +481,7 @@ td.keys {
       border-top: 1px solid $list-group-border-color;
       position: relative;
       padding: 10px 0px;
+      min-height: 110px;
       &:first-child {
         border-top: none;
       }
